--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2 style="display:flex;justify-content: center;text-decoration:underline;">WELCOME TO TASK MANAGER</h2>
     <div style="display: flex; justify-content: center;">
         <img src="Task.jpg" alt="Task Image">
-    
+    </div>
     <script>
         async function getdata() {
             const response = await fetch("http://localhost:6969/tasks");
@@ -37,7 +37,7 @@
 
 
         <div style="display: flex;justify-content: center;">
-        <button onclick="getdata()" ,style="display:flex;justify-content: center ;">task</button> 
+        <button onclick="getdata()" style="display:flex;justify-content: center ;">task</button> 
     </div>
     <ol id="task-list"></ol>
 </body>
